--- a/001basics/test.html
+++ b/001basics/test.html
@@ -24,6 +24,9 @@
     </style>
 </head>
 <body>
+<audio src="MP3/无敌.mp3"  controls="controls" >
+</audio>
+
 <h1>静夜思</h1>
 <p>床前明月光</p>
 <p>疑是地上霜</p>
