--- a/001basics/test.html
+++ b/001basics/test.html
@@ -16,15 +16,14 @@
         @keyframes myfirst {
             from {opacity: 0}
             to {opacity: 100}
-
         }
         h1,p{
             animation: myfirst 2s infinite;
         }
     </style>
 </head>
-<body>
-<audio src=" MP3/无敌.mp3" controls="controls"  autoplay="autoplay">
+<audio controls="controls" autoplay="autoplay" />>
+    <source src="MP3/无敌.wav" type="audio/ogg" />
 </audio>
 <h1>静夜思</h1>
 <p>床前明月光</p>
