--- a/001basics/test.html
+++ b/001basics/test.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <audio controls="controls" autoplay="autoplay" />>
-    <source src="MP3/无敌.wav"  type="audio/ogg" />
+    <source src="WAV/无敌.wav" type="audio/ogg" />
 </audio>
 <h1>静夜思</h1>
 <p>床前明月光</p>
