--- a/001basics/test.html
+++ b/001basics/test.html
@@ -22,8 +22,8 @@
         }
     </style>
 </head>
-<audio controls="controls" autoplay="autoplay" />>
-    <source src="WAV/无敌.wav" type="audio/ogg" />
+<body>
+<audio source src="WAV/无敌.wav"  controls="controls" autoplay="autoplay" >
 </audio>
 <h1>静夜思</h1>
 <p>床前明月光</p>
