--- a/001basics/biaobai.html
+++ b/001basics/biaobai.html
@@ -14,18 +14,36 @@
             height: 100% ;
         }
         @keyframes myfirst {
-            from {opacity: 0}
-            to {opacity: 100}
+            0% {opacity: 0}
+            25% {opacity: 100}
+            50% {opacity: 0}
+            100% {opacity: 0}
         }
-        h1,p{
-            animation: myfirst 2s infinite;
+        @keyframes mysecond {
+            0% {opacity: 0}
+            25% {opacity: 100}
+            75% {opacity: 0}
+            100% {opacity: 0}
+        }
+        p{
+            font-size: 100px;
+            position:  absolute;
+            width: 100%;
+            text-align: center ;
+
+        }
+        #wudi{
+            animation: myfirst 3s infinite;
+        }
+        #duo{
+            animation: mysecond 3s infinite;
         }
     </style>
 </head>
 <body>
-<audio source src="WAV/无敌.wav"  controls="controls" autoplay="autoplay" >
+<audio source src="WAV/无敌.wav" controls="controls" autoplay="autoplay"  loop="loop">
 </audio>
-<p>举头望明月</p>
-<p>低头思故乡</p>
+<p id="wudi">无敌是多么</p>
+<p id="duo">多么寂寞</p>
 </body>
 </html>
